--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^6.1.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
-    "expo-font": "^11.4.0",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
