--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@expo/ngrok": "^4.1.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -26,8 +27,7 @@
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "expo-device": "~5.2.1"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
